Updated to JavaCPP 1.5.11 (MKL and CUDA), and fixed several bugs related to subtensors and offsets.